--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "18.1.0",
     "react-native": "0.70.15",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
