--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/react-native": "^12.5.2",
     "react": "18.1.0",
     "react-native": "0.70.15",
     "react-native-safe-area-context": "^4.10.8",
